--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,5 +6,6 @@
 @import "./partials/video-presentacion-index";
 @import "./partials/footer";
 @import "./partials/sobre-nosotros";
-
+@import "./partials/productos-page";
+@import "./partials/contacto-page";
 
