Incorporación de estilos

--- a/css/partials/_video-presentacion-index.scss
+++ b/css/partials/_video-presentacion-index.scss
@@ -1,6 +1,6 @@
 .conteiner_video-presentacion{
     background-color: $colorPrincipal;
-    height: auto;
+    height:auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,6 +23,11 @@
             color: white;
             
         }
+        
+        iframe{
+            height: 120%;
+        }
+
     }
 
 
