--- a/css/partials/_productos-page.scss
+++ b/css/partials/_productos-page.scss
@@ -19,7 +19,7 @@ html{
    background-color: $colorPrincipal;
 }
 
-.container{
+.container_productos{
    max-width: 1200px;
    margin:0 auto;
    padding:3rem 2rem;
