--- a/css/styles.css
+++ b/css/styles.css
@@ -122,19 +122,84 @@ header .nav-link {
 .conteiner_video-presentacion .square_conteiner h3 {
   color: white;
 }
+.conteiner_video-presentacion .square_conteiner iframe {
+  height: 120%;
+}
 
-footer {
+.pie-pagina {
+  width: 100%;
+  background-color: #0a141d;
+}
+
+.pie-pagina .grupo-1 {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  padding: 45px 0px;
+}
+
+.pie-pagina .grupo-1 .box figure {
+  width: 100%;
+  height: 100%;
   display: flex;
-  height: 10vh;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  padding-left: 10%;
-  background-color: #0F4C75;
-}
-footer div a img {
-  width: 15%;
 }
 
+.pie-pagina .grupo-1 .box figure img {
+  width: 250px;
+}
+
+.pie-pagina .grupo-1 .box h2 {
+  color: #fff;
+  margin-bottom: 25px;
+  font-size: 20px;
+}
+
+.pie-pagina .grupo-1 .box p {
+  color: #efefef;
+  margin-bottom: 10px;
+}
+
+.pie-pagina .grupo-1 .red-social a {
+  display: inline-block;
+  text-decoration: none;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  color: #fff;
+  margin-right: 10px;
+  background-color: #0d2033;
+  text-align: center;
+  transition: all 300ms ease;
+}
+
+.pie-pagina .grupo-1 .red-social a:hover {
+  color: aqua;
+}
+
+.pie-pagina .grupo-2 {
+  background-color: #0a1a2a;
+  padding: 15px 10px;
+  text-align: center;
+  color: #fff;
+}
+
+.pie-pagina .grupo-2 small {
+  font-size: 15px;
+}
+
+@media screen and (max-width: 800px) {
+  .pie-pagina .grupo-1 {
+    width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px;
+    padding: 35px 0px;
+  }
+}
 .section__aboutus {
   background-image: url(../assets/img/Fondocover.png);
   background-repeat: no-repeat;
@@ -201,7 +266,7 @@ html {
   background-color: #1B262C;
 }
 
-.container {
+.container_productos {
   max-width: 1200px;
   margin: 0 auto;
   padding: 3rem 2rem;
@@ -382,117 +447,358 @@ html {
     font-size: 50%;
   }
 }
-.body_contacto {
+.container_page-contact {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  padding: 2rem;
   background-color: #1B262C;
-  color: #fff;
-  line-height: 1.6;
-  font-family: "Quicksand", sans-serif;
-  padding: 0 1.5em;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 20%;
 }
 
-.container {
-  max-width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1.5em;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.logo {
-  text-align: center;
-  font-size: 3em;
-}
-
-.logo span {
-  color: #B70E21;
-}
-
-.contact-wrapper {
-  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
-}
-
-.contact-wrapper > * {
-  padding: 1em;
+.form {
+  width: 100%;
+  max-width: 820px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .contact-form {
-  background: #222222;
+  background-color: #1abc9c;
+  position: relative;
 }
 
-.contact-form form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.circle {
+  border-radius: 50%;
+  background: linear-gradient(135deg, transparent 20%, #1B262C);
+  position: absolute;
 }
 
-.contact-form form label {
-  display: block;
+.circle.one {
+  width: 130px;
+  height: 130px;
+  top: 130px;
+  right: -40px;
 }
 
-.contact-form form p {
-  margin: 0;
-  padding: 1em;
+.circle.two {
+  width: 80px;
+  height: 80px;
+  top: 10px;
+  right: 30px;
 }
 
-.contact-form form .block {
-  grid-column: 1/3;
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color: #1abc9c;
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
 }
 
-.contact-form form button,
-.contact-form form input,
-.contact-form form textarea {
+form {
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
+}
+
+.title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
+}
+
+.input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+.input {
   width: 100%;
-  padding: 0.7em;
-  border: none;
+  outline: none;
+  border: 2px solid #fafafa;
   background: none;
-  outline: 0;
+  padding: 0.6rem 1.2rem;
   color: #fff;
-  border-bottom: 1px solid #d63031;
+  font-weight: 500;
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+  border-radius: 25px;
+  transition: 0.3s;
 }
 
-.contact-form form button {
-  background: #B70E21;
-  border: 0;
-  text-transform: uppercase;
-  padding: 1em;
+textarea.input {
+  padding: 0.8rem 1.2rem;
+  min-height: 150px;
+  border-radius: 22px;
+  resize: none;
+  overflow-y: auto;
 }
 
-.contact-form form button:hover,
-.contact-form form button:focus {
-  background: #d63031;
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  padding: 0 0.4rem;
+  color: #fafafa;
+  font-size: 0.9rem;
+  font-weight: 400;
+  pointer-events: none;
+  z-index: 1000;
+  transition: 0.5s;
+}
+
+.input-container.textarea label {
+  top: 1rem;
+  transform: translateY(0);
+}
+
+.btn {
+  padding: 0.6rem 1.3rem;
+  background-color: #fff;
+  border: 2px solid #fafafa;
+  font-size: 0.95rem;
+  color: #1abc9c;
+  line-height: 1;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0;
+}
+
+.btn:hover {
+  background-color: transparent;
   color: #fff;
-  transition: background-color 1s ease-out;
-  outline: 0;
 }
 
-/* CONTACT INFO */
+.input-container span {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  transform: translateY(-50%);
+  font-size: 0.8rem;
+  padding: 0 0.4rem;
+  color: transparent;
+  pointer-events: none;
+  z-index: 500;
+}
+
+.input-container span:before,
+.input-container span:after {
+  content: "";
+  position: absolute;
+  width: 10%;
+  opacity: 0;
+  transition: 0.3s;
+  height: 5px;
+  background-color: #1abc9c;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-container span:before {
+  left: 50%;
+}
+
+.input-container span:after {
+  right: 50%;
+}
+
+.input-container.focus label {
+  top: 0;
+  transform: translateY(-50%);
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+.input-container.focus span:before,
+.input-container.focus span:after {
+  width: 50%;
+  opacity: 1;
+}
+
 .contact-info {
-  background: #000;
+  padding: 2.3rem 2.2rem;
+  position: relative;
 }
 
-.contact-info h4, .contact-info ul, .contact-info p {
+.contact-info .title {
+  color: #1abc9c;
+}
+
+.text {
+  color: #333;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+.icon {
+  width: 28px;
+  margin-right: 0.7rem;
+}
+
+.social-media {
+  padding: 2rem 0 0 0;
+}
+
+.social-media p {
+  color: #333;
+}
+
+.social-icons {
+  display: flex;
+  margin-top: 0.5rem;
+}
+
+.social-icons a {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+  background: linear-gradient(45deg, #1abc9c, #149279);
+  color: #fff;
   text-align: center;
-  margin: 0 0 1rem 0;
+  line-height: 35px;
+  margin-right: 0.5rem;
+  transition: 0.3s;
 }
 
-/* LARGE SIZE */
-@media (min-width: 700px) {
-  body {
-    padding: 0 4em;
+.social-icons a:hover {
+  transform: scale(1.05);
+}
+
+.contact-info:before {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 100px;
+  border: 22px solid #1abc9c;
+  border-radius: 50%;
+  bottom: -77px;
+  right: 50px;
+  opacity: 0.3;
+}
+
+.big-circle {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom, #1cd4af, #159b80);
+  bottom: 50%;
+  right: 50%;
+  transform: translate(-40%, 38%);
+}
+
+.big-circle:after {
+  content: "";
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  background-color: #fafafa;
+  border-radius: 50%;
+  top: calc(50% - 180px);
+  left: calc(50% - 180px);
+}
+
+.square {
+  position: absolute;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(181%, 11%);
+  opacity: 0.2;
+}
+
+@media (max-width: 850px) {
+  .form {
+    grid-template-columns: 1fr;
   }
-  .contact-wrapper {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
   }
-  .contact-wrapper > * {
-    padding: 2em;
+  .contact-form:before {
+    top: -13px;
+    left: initial;
+    right: 70px;
   }
-  .contact-info h4,
-.contact-info ul,
-.contact-info p {
-    text-align: left;
+  .square {
+    transform: translate(140%, 43%);
+    height: 350px;
+  }
+  .big-circle {
+    bottom: 75%;
+    transform: scale(0.9) translate(-40%, 30%);
+    right: 50%;
+  }
+  .text {
+    margin: 1rem 0 1.5rem 0;
+  }
+  .social-media {
+    padding: 1.5rem 0 0 0;
+  }
+}
+@media (max-width: 480px) {
+  .container {
+    padding: 1.5rem;
+  }
+  .contact-info:before {
+    display: none;
+  }
+  .square,
+.big-circle {
+    display: none;
+  }
+  form,
+.contact-info {
+    padding: 1.7rem 1.6rem;
+  }
+  .text,
+.information,
+.social-media p {
+    font-size: 0.8rem;
+  }
+  .title {
+    font-size: 1.15rem;
+  }
+  .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+  .icon {
+    width: 23px;
+  }
+  .input {
+    padding: 0.45rem 1.2rem;
+  }
+  .btn {
+    padding: 0.45rem 1.2rem;
   }
 }/*# sourceMappingURL=styles.css.map */
