--- a/css/partials/_productos-page.scss
+++ b/css/partials/_productos-page.scss
@@ -1,47 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
 
-*{
-   font-family: 'Nunito', sans-serif;
-   margin:0; padding:0;
-   box-sizing: border-box;
-   outline: none; border:none;
-   text-decoration: none;
-   transition: all .2s linear;
-   text-transform: capitalize;
+// *{
+//    font-family: 'Nunito', sans-serif;
+//    margin:0; padding:0;
+//    box-sizing: border-box;
+//    outline: none; border:none;
+//    text-decoration: none;
+//    transition: all .2s linear;
+//    text-transform: capitalize;
+// }
+
+// html{
+//    font-size: 62.5%;
+//    overflow-x: hidden;
+// }
+
+.body_product{
+   background: $colorPrincipal;
 }
 
-html{
-   font-size: 62.5%;
-   overflow-x: hidden;
-} 
-
-.body_productos{
-   background-color: $colorPrincipal;
-}
-
-.container_productos{
+.container_product{
    max-width: 1200px;
    margin:0 auto;
    padding:3rem 2rem;
-
 }
 
-
-.container .title{
+.container_product .title{
    font-size: 3.5rem;
-   color: #fff;
+   color:#fff;
    margin-bottom: 3rem;
    text-transform: uppercase;
    text-align: center;
 }
 
-.container .products-container{
+.container_product .products-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
    gap:2rem;
 }
 
-.container .products-container .product{
+.container_product .products-container .product{
    text-align: center;
    padding:3rem 2rem;
    background: #fff;
@@ -51,30 +49,30 @@ html{
    cursor: pointer;
 }
 
-.container .products-container .product:hover{
+.container_product .products-container .product:hover{
    outline: .2rem solid #222;
    outline-offset: 0;
 }
 
-.container .products-container .product img{
+.container_product .products-container .product img{
    height: 25rem;
 }
 
-.container .products-container .product:hover img{
+.container_product .products-container .product:hover img{
    transform: scale(.9);
 }
 
-.container .products-container .product h3{
+.container_product .products-container .product h3{
    padding:.5rem 0;
    font-size: 2rem;
    color:#444;
 }
 
-.container .products-container .product:hover h3{
+.container_product .products-container .product:hover h3{
    color:#27ae60;
 }
 
-.container .products-container .product .price{
+.container_product .products-container .product .price{
    font-size: 2rem;
    color:#444;
 }
@@ -181,9 +179,6 @@ html{
    color:#fff;
 }
 
-.width_img{
-   width: 95%;
-}
 
 @media (max-width:991px){
 
