--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,10 +2,11 @@
 @import "./partials/reset";
 @import "./partials/header-nav";
 @import "./partials/header-cover";
-@import "./partials/cards-index";
 @import "./partials/video-presentacion-index";
+@import "./partials/cards-index";
 @import "./partials/footer";
 @import "./partials/sobre-nosotros";
 @import "./partials/productos-page";
 @import "./partials/contacto-page";
+@import "./partials/reviews-page";
 
