--- a/css/partials/_contacto-page.scss
+++ b/css/partials/_contacto-page.scss
@@ -25,7 +25,7 @@
   }
   
   .contact-form {
-    background-color: #1abc9c;;
+    background-color: $colorSecundiario;;
     position: relative;
   }
   
@@ -55,7 +55,7 @@
     position: absolute;
     width: 26px;
     height: 26px;
-    background-color: #1abc9c;
+    background-color: $colorSecundiario;
     transform: rotate(45deg);
     top: 50px;
     left: -13px;
@@ -127,7 +127,7 @@
     background-color: #fff;
     border: 2px solid #fafafa;
     font-size: 0.95rem;
-    color: #1abc9c;
+    color: $colorSecundiario;
     line-height: 1;
     border-radius: 25px;
     outline: none;
@@ -161,7 +161,7 @@
     opacity: 0;
     transition: 0.3s;
     height: 5px;
-    background-color: #1abc9c;
+    background-color: $colorSecundiario;
     top: 50%;
     transform: translateY(-50%);
   }
@@ -193,7 +193,7 @@
   }
   
   .contact-info .title {
-    color: #1abc9c;
+    color: $colorSecundiario;
   }
   
   .text {
@@ -212,6 +212,7 @@
   .icon {
     width: 28px;
     margin-right: 0.7rem;
+  
   }
   
   .social-media {
@@ -231,7 +232,7 @@
     width: 35px;
     height: 35px;
     border-radius: 5px;
-    background: linear-gradient(45deg, #1abc9c, #149279);
+    background: linear-gradient(45deg, #0F4C75, #3282B8);
     color: #fff;
     text-align: center;
     line-height: 35px;
@@ -248,7 +249,7 @@
     position: absolute;
     width: 110px;
     height: 100px;
-    border: 22px solid #1abc9c;
+    border: 22px solid $colorSecundiario;
     border-radius: 50%;
     bottom: -77px;
     right: 50px;
@@ -260,7 +261,7 @@
     width: 500px;
     height: 500px;
     border-radius: 50%;
-    background: linear-gradient(to bottom, #1cd4af, #159b80);
+    background: linear-gradient(to bottom, #0F4C75, #3282B8);
     bottom: 50%;
     right: 50%;
     transform: translate(-40%, 38%);
@@ -371,3 +372,9 @@
       padding: 0.45rem 1.2rem;
     }
   }
+
+
+
+
+
+
