--- a/css/partials/_header-nav.scss
+++ b/css/partials/_header-nav.scss
@@ -1,6 +1,4 @@
 header{
-
-    font-family: "$fontBaloo";
     
     .logo__nav{
         width: 40%;
@@ -8,7 +6,8 @@ header{
 
     
     .background-color{
-            background-color: $colorPrincipal;
+            background-color: $colorSecundiario;
+            
         
     }
 
