--- a/css/partials/_productos-page.scss
+++ b/css/partials/_productos-page.scss
@@ -1,32 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap');
 
-// *{
-//    font-family: 'Nunito', sans-serif;
-//    margin:0; padding:0;
-//    box-sizing: border-box;
-//    outline: none; border:none;
-//    text-decoration: none;
-//    transition: all .2s linear;
-//    text-transform: capitalize;
-// }
-
-// html{
-//    font-size: 62.5%;
-//    overflow-x: hidden;
-// }
-
 .body_product{
    background: $colorPrincipal;
+   
 }
 
 .container_product{
    max-width: 1200px;
-   margin:0 auto;
+   margin: 0 auto;
    padding:3rem 2rem;
+   
+   
 }
 
 .container_product .title{
-   font-size: 3.5rem;
+   font-size: 2.5rem;
    color:#fff;
    margin-bottom: 3rem;
    text-transform: uppercase;
@@ -37,6 +25,8 @@
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
    gap:2rem;
+   padding-left: 7%;
+   
 }
 
 .container_product .products-container .product{
@@ -47,6 +37,9 @@
    outline: .1rem solid #ccc;
    outline-offset: -1.5rem;
    cursor: pointer;
+   overflow: hidden;
+   width: 25rem;
+   height: 26rem;
 }
 
 .container_product .products-container .product:hover{
@@ -55,11 +48,14 @@
 }
 
 .container_product .products-container .product img{
-   height: 25rem;
+   height: 10rem;
+   
 }
 
 .container_product .products-container .product:hover img{
    transform: scale(.9);
+   
+
 }
 
 .container_product .products-container .product h3{
@@ -95,7 +91,8 @@
    background: #fff;
    position: relative;
    margin:2rem;
-   width: 40rem;
+   width: 30rem;
+   height: 35rem;
 }
 
 .products-preview .preview.active{
@@ -103,7 +100,7 @@
 }
 
 .products-preview .preview img{
-   height: 30rem;
+   height: 8rem;
 }
 
 .products-preview .preview .fa-times{
@@ -121,12 +118,12 @@
 .products-preview .preview h3{
    color:#444;
    padding:.5rem 0;
-   font-size: 2.5rem;
+   font-size: 1.5rem;
 }
 
 .products-preview .preview .stars{
    padding:1rem 0;
-   font-size: 1.7rem;
+   font-size: 1rem;
 }
 
 .products-preview .preview .stars i{
@@ -140,27 +137,27 @@
 .products-preview .preview p{
    line-height: 1.5;
    padding:1rem 0;
-   font-size: 1.6rem;
+   font-size: 1rem;
    color:#777;
 }
 
 .products-preview .preview .price{
    padding:1rem 0;
-   font-size: 2.5rem;
+   font-size: 1.5rem;
    color:#27ae60;
 }
 
 .products-preview .preview .buttons{
    display: flex;
-   gap:1.5rem;
+   gap:0.5rem;
    flex-wrap: wrap;
    margin-top: 1rem;
 }
 
 .products-preview .preview .buttons a{
-   flex:1 1 16rem;
+   flex:0.5 0.5 8rem;
    padding:1rem;
-   font-size: 1.8rem;
+   font-size: 1rem;
    color:#444;
    border:.1rem solid #444;
 }
@@ -180,6 +177,8 @@
 }
 
 
+
+
 @media (max-width:991px){
 
    html{
@@ -188,18 +187,39 @@
 
 }
 
+
 @media (max-width:768px){
 
    .products-preview .preview img{
       height: 25rem;
    }
 
+   .container_product .products-container{
+      padding-left: 13%;
+      
+   }
+
 }
 
-@media (max-width:450px){
+@media (max-width:480px){
 
    html{
       font-size: 50%;
+   }
+
+   .container_product .products-container{
+      padding-left: 23%;
+      
+   }
+
+   .products-preview .preview{
+      overflow: hidden;
+      height: auto;
+   }
+
+   .products-preview .preview img{
+      overflow: hidden;
+      width: auto;
    }
 
 }
