--- a/css/partials/_sobre-nosotros.scss
+++ b/css/partials/_sobre-nosotros.scss
@@ -1,52 +1,58 @@
 .section__aboutus{
     background-color: $colorPrincipal;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+
     h2{
-        margin-left: 45%;
         color: #fff;
-        background-color: $colorPrincipal;
-        padding-top: 3%;
+        padding: 5%;
+        
     }
 
     .nosotros__info{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
-        margin-top: 8rem;
+        padding: 0 5% 5% 5%;
 
         .nosotros__info-text{
-            font-family:TTNorms-Regular;
-            color:#fff;
-            font-size: 1em;
-            width: 30em;
-            height: 10em;
-            margin-left: 100px;
-            overflow: scroll;
-
-    
-
-            
-            
+            color: #fff;
+            max-width: 50%;
+            padding-right: 10%;
         }
-        
-        .nosotros__info-text::-webkit-scrollbar{
-            width: 3px;
-            height: 3px;
-            background-color: rgb(224, 255, 245);
-            
+
+        img{
+            width: 80%;
+            padding-left: 10%;
         }
-        
-        
     }
-    
-    
+
 
 }
 
-.section__aboutus img{
-    width: 500px;
-    
+
+@media screen and (max-width: 480px){
+
+    .nosotros__info{
+        flex-direction: column;   
+        justify-content: center;
+        align-items: center;
+
+        p{
+            height: 5%;
+
+        }
+
+        img{
+            width: 60%;
+            padding-left: 10%;
+            padding-top: 5%;
+        }
+
+
+    }
+
 }
-
-
-
-
